add deleted files