@@ -2,12 +2,14 @@ package by.dz.fruits_in_choco.fruits_in_choco.entity;
 
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 public enum Role {
-    ADMIN(Set.of(Permission.USER, Permission.ADMIN)),
-    USER(Set.of(Permission.USER));
+    ADMIN(new HashSet<>(Arrays.asList(Permission.ADMIN, Permission.USER))),
+    USER(new HashSet<>(Arrays.asList(Permission.USER)));
 
     private final Set<Permission> permissions;
 
